// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PaginatedTable > render correctly in server mode 1`] = `
<div>
  <div class="v-table v-table--has-top v-table--has-bottom v-theme--light v-table--density-default v-data-table" itemslength="0">
    <!---->
    <div class="v-table__wrapper">
      <table>
        <!---->
        <thead>
          <tr>
            <th class="v-data-table__td v-data-table-column--align-start v-data-table__th v-data-table__th--sortable" colspan="1" rowspan="1">
              <div class="v-data-table-header__content"><span>ID</span><i class="mdi-arrow-up mdi v-icon notranslate v-theme--light v-icon--size-default v-data-table-header__sort-icon" aria-hidden="true"></i>
                <!---->
              </div>
            </th>
            <th class="v-data-table__td v-data-table-column--align-start v-data-table__th v-data-table__th--sortable" colspan="1" rowspan="1">
              <div class="v-data-table-header__content"><span>Name</span><i class="mdi-arrow-up mdi v-icon notranslate v-theme--light v-icon--size-default v-data-table-header__sort-icon" aria-hidden="true"></i>
                <!---->
              </div>
            </th>
            <th class="v-data-table__td v-data-table-column--align-start v-data-table__th v-data-table__th--sortable" colspan="1" rowspan="1">
              <div class="v-data-table-header__content"><span>Age</span><i class="mdi-arrow-up mdi v-icon notranslate v-theme--light v-icon--size-default v-data-table-header__sort-icon" aria-hidden="true"></i>
                <!---->
              </div>
            </th>
          </tr>
          <!---->
        </thead>
        <!---->
        <tbody>
          <!---->
          <tr class="v-data-table-rows-no-data">
            <td colspan="3">No data available</td>
          </tr>
          <!---->
        </tbody>
        <!---->
        <!---->
      </table>
    </div>
    <hr class="v-divider v-theme--light" aria-orientation="horizontal" role="separator">
    <div class="v-data-table-footer">
      <!---->
      <div class="v-data-table-footer__items-per-page"><span>Items per page:</span>
        <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-locale--is-ltr v-input--dirty v-text-field v-select v-select--single v-select--selected">
          <!---->
          <div class="v-input__control">
            <div class="v-field v-field--active v-field--appended v-field--center-affix v-field--dirty v-field--no-label v-field--variant-outlined v-theme--light v-locale--is-ltr" role="combobox">
              <div class="v-field__overlay"></div>
              <div class="v-field__loader">
                <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                  <!---->
                  <div class="v-progress-linear__background" style="width: 100%;"></div>
                  <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                    <div class="v-progress-linear__indeterminate">
                      <div class="v-progress-linear__indeterminate long"></div>
                      <div class="v-progress-linear__indeterminate short"></div>
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <!---->
              <div class="v-field__field" data-no-activator="">
                <!----><label class="v-label v-field-label" for="input-0">
                  <!---->
                  <!---->
                </label>
                <!---->
                <div class="v-field__input" data-no-activator="">
                  <!---->
                  <!---->
                  <div class="v-select__selection"><span class="v-select__selection-text">10<!----></span></div><input size="1" type="text" id="input-0" aria-describedby="input-0-messages" inputmode="none" aria-label="Open" title="Open">
                </div>
                <!---->
              </div>
              <!---->
              <div class="v-field__append-inner">
                <!----><i class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-select__menu-icon" aria-hidden="true"></i>
                <!---->
              </div>
              <div class="v-field__outline">
                <div class="v-field__outline__start"></div>
                <!---->
                <div class="v-field__outline__end"></div>
                <!---->
              </div>
            </div>
          </div>
          <!---->
          <!---->
        </div>
      </div>
      <div class="v-data-table-footer__info">
        <div>0-0 of 0</div>
      </div>
      <div class="v-data-table-footer__pagination">
        <nav class="v-pagination v-theme--light" role="navigation" aria-label="Pagination Navigation">
          <ul class="v-pagination__list">
            <li class="v-pagination__first"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="First page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-page-first mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                <!---->
                <!---->
              </button></li>
            <li class="v-pagination__prev"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Previous page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-left mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                <!---->
                <!---->
              </button></li>
            <li class="v-pagination__next"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Next page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-right mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                <!---->
                <!---->
              </button></li>
            <li class="v-pagination__last"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Last page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-page-last mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                <!---->
                <!---->
              </button></li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaginatedTable > renders correctly in local mode 1`] = `
<div>
  <div class="v-table v-table--has-top v-table--has-bottom v-theme--light v-table--density-default v-data-table" itemslength="0">
    <!---->
    <div class="v-table__wrapper">
      <table>
        <!---->
        <thead>
          <tr>
            <th class="v-data-table__td v-data-table-column--align-start v-data-table__th v-data-table__th--sortable" colspan="1" rowspan="1">
              <div class="v-data-table-header__content"><span>ID</span><i class="mdi-arrow-up mdi v-icon notranslate v-theme--light v-icon--size-default v-data-table-header__sort-icon" aria-hidden="true"></i>
                <!---->
              </div>
            </th>
            <th class="v-data-table__td v-data-table-column--align-start v-data-table__th v-data-table__th--sortable" colspan="1" rowspan="1">
              <div class="v-data-table-header__content"><span>Name</span><i class="mdi-arrow-up mdi v-icon notranslate v-theme--light v-icon--size-default v-data-table-header__sort-icon" aria-hidden="true"></i>
                <!---->
              </div>
            </th>
            <th class="v-data-table__td v-data-table-column--align-start v-data-table__th v-data-table__th--sortable" colspan="1" rowspan="1">
              <div class="v-data-table-header__content"><span>Age</span><i class="mdi-arrow-up mdi v-icon notranslate v-theme--light v-icon--size-default v-data-table-header__sort-icon" aria-hidden="true"></i>
                <!---->
              </div>
            </th>
          </tr>
          <!---->
        </thead>
        <!---->
        <tbody>
          <!---->
          <tr class="v-data-table__tr">
            <td class="v-data-table__td v-data-table-column--align-start">1</td>
            <td class="v-data-table__td v-data-table-column--align-start">John Doe</td>
            <td class="v-data-table__td v-data-table-column--align-start">25</td>
          </tr>
          <!---->
          <tr class="v-data-table__tr">
            <td class="v-data-table__td v-data-table-column--align-start">2</td>
            <td class="v-data-table__td v-data-table-column--align-start">Jane Doe</td>
            <td class="v-data-table__td v-data-table-column--align-start">30</td>
          </tr>
          <!---->
          <tr class="v-data-table__tr">
            <td class="v-data-table__td v-data-table-column--align-start">3</td>
            <td class="v-data-table__td v-data-table-column--align-start">John Smith</td>
            <td class="v-data-table__td v-data-table-column--align-start">35</td>
          </tr>
          <!---->
          <!---->
        </tbody>
        <!---->
        <!---->
      </table>
    </div>
    <hr class="v-divider v-theme--light" aria-orientation="horizontal" role="separator">
    <div class="v-data-table-footer">
      <!---->
      <div class="v-data-table-footer__items-per-page"><span>Items per page:</span>
        <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-locale--is-ltr v-input--dirty v-text-field v-select v-select--single v-select--selected">
          <!---->
          <div class="v-input__control">
            <div class="v-field v-field--active v-field--appended v-field--center-affix v-field--dirty v-field--no-label v-field--variant-outlined v-theme--light v-locale--is-ltr" role="combobox">
              <div class="v-field__overlay"></div>
              <div class="v-field__loader">
                <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                  <!---->
                  <div class="v-progress-linear__background" style="width: 100%;"></div>
                  <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                    <div class="v-progress-linear__indeterminate">
                      <div class="v-progress-linear__indeterminate long"></div>
                      <div class="v-progress-linear__indeterminate short"></div>
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <!---->
              <div class="v-field__field" data-no-activator="">
                <!----><label class="v-label v-field-label" for="input-0">
                  <!---->
                  <!---->
                </label>
                <!---->
                <div class="v-field__input" data-no-activator="">
                  <!---->
                  <!---->
                  <div class="v-select__selection"><span class="v-select__selection-text">10<!----></span></div><input size="1" type="text" id="input-0" aria-describedby="input-0-messages" inputmode="none" aria-label="Open" title="Open">
                </div>
                <!---->
              </div>
              <!---->
              <div class="v-field__append-inner">
                <!----><i class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-select__menu-icon" aria-hidden="true"></i>
                <!---->
              </div>
              <div class="v-field__outline">
                <div class="v-field__outline__start"></div>
                <!---->
                <div class="v-field__outline__end"></div>
                <!---->
              </div>
            </div>
          </div>
          <!---->
          <!---->
        </div>
      </div>
      <div class="v-data-table-footer__info">
        <div>1-3 of 3</div>
      </div>
      <div class="v-data-table-footer__pagination">
        <nav class="v-pagination v-theme--light" role="navigation" aria-label="Pagination Navigation">
          <ul class="v-pagination__list">
            <li class="v-pagination__first"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="First page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-page-first mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                <!---->
                <!---->
              </button></li>
            <li class="v-pagination__prev"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Previous page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-left mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                <!---->
                <!---->
              </button></li>
            <li class="v-pagination__next"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Next page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-right mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                <!---->
                <!---->
              </button></li>
            <li class="v-pagination__last"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Last page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-page-last mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
                <!---->
                <!---->
              </button></li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;
